--- a/week9 /tic-tac-toe/src/App.css
+++ b/week9 /tic-tac-toe/src/App.css
@@ -1,15 +1,20 @@
-h1, p {
-  font-family: Lato;
-}
-.body {
+body {
   font: 14px "Century Gothic", Futura, sans-serif;
-  margin: 20px;
+  margin:0;
+  padding:0;
+
 }
 
 ol, ul {
   padding-left: 30px;
 }
+h1{
+  text-align:center;
+  font-size:3em;
+  color:white;
+  text-shadow: 2px 2px 1px black
 
+}
 .board-row:after {
   clear: both;
   content: "";
@@ -19,20 +24,34 @@ ol, ul {
 .status {
   margin-bottom: 10px;
 }
-
+.board-bg{
+  background:rgb(192, 141, 212);
+  width:100%;
+  height:80vh;
+  padding-top:2vh;
+}
+.board-Wrapper{
+width:31.3%;
+margin:auto;
+box-shadow:  1px 1px 20px black;
+}
 .square {
   background: #fff;
+  color:rgb(192, 141, 212);
+  text-shadow: 2px 2px 1px black;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 100px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
-  margin-right: -1px;
-  margin-top: -1px;
+  height: 150px;
   padding: 0;
+  margin: 0;
   text-align: center;
-  width: 34px;
+  width: 150px;
+}
+.square:hover{
+  cursor: pointer;
 }
 
 .square:focus {
@@ -45,10 +64,41 @@ ol, ul {
 
 .game {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .game-info {
-  margin-left: 20px;
+  width:50vw;
+  margin:auto;
+  font-size:2em;
 }
-
+.game-info button{
+  color:white;
+  font-size:1.2rem;
+  border-radius: 5px;
+  width:100%;
+  height:3vh;
+  border:none;
+  background-color:rgb(192, 141, 212);
+  transition: 1s;
+  text-shadow: 2px 2px 1px black;
+}
+.game-info button::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0;
+  background-color: black;
+  transition: width 2s ease;
+}
+.game-info button:hover::after {
+  width: 100%;
+}
+.game-info button:hover{
+  background-color:rgb(192, 141, 212);
+  cursor: pointer;
+}
+ol{
+  width:20vw;
+  margin-left:15vw;
+}
